# k2_log_file_converter

benchmarks/parquet_preprocessing/: k2_control_log_utils.py  main_benchmark_parquet_files_read.py  main_convert_all_log_files_to_parquet.py
parquet_preprocessing/: k2_control_log_reader_writer.py  main_benchmark_parquet_files_write.py  pylab_utils.py
pylang/: csv_to_parquet.py
rustlang/csv_to_parquet/: Cargo.toml  justfile  rustfmt.toml
rustlang/csv_to_parquet/deprecated/: build.rs  cli_interface_builder.rs  file_processing_utils.rs  install.sh  main.rs  main_loop_sub.rs  main_v0.rs  main_v2.rs  person.rs  time_series_utils.rs
rustlang/csv_to_parquet/src/: cli_interface_builder.rs  cli_interface_derive.rs  csv_to_parquet_utils.rs  decimation_utils.rs  downsample_utils.rs  file_utils.rs  file_utils_tests.rs  main.rs  polars_conversion_utils.rs  sample_rate_utils.rs  stopwatch.rs
rustlang/log_file_stats_gen/: Cargo.toml  add_deps.sh
rustlang/log_file_stats_gen/deprecated/: build.rs  cli_interface_derive.rs  main_builder_clap.rs
rustlang/log_file_stats_gen/src/: cli_interface_builder.rs  csv_to_parquet_utils.rs  file_utils.rs  main.rs  polars_stats_utils.rs  stopwatch.rs
rustlang/polars_playground/: Cargo.toml
rustlang/polars_playground/src/: main.rs
rustlang/polars_tests/: Cargo.toml
rustlang/polars_tests/deprecated/: convert_timesamp_to_polars.rs
rustlang/polars_tests/src/: downsample_df.rs  main.rs  polars_statistics.rs  sample_rate_utils.rs
rustlang/sample_files/: test_4.csv
scripts/rustlang/csv_to_parquet/: Cargo.toml  add_deps.sh
(+1 files in other folders)
