[package]
name = "log_file_stats_gen"
version = "1.0.0"
edition = "2021"

[dependencies]
#avro = "0.2.1"
#csv = "1.3.0"
indicatif = "0.17.8"
parquet = "52.0.0"
polars = { version = "0.40.0", features = ["avro", "csv", "parquet","lazy","serde"] }
humantime = "2.1.0"
clap = { version = "4.5.11", features = ["cargo", "derive"] }
glob = "0.3.1"
tempfile = "3.10.1"
chrono = { version = "0.4", features = ["serde"] }

#[build-dependencies]
#std = { version = "1" }

[build-dependencies]
#std = { version = "1" }
dirs = "5"
